Fix mobild control colours in dark mode

--- a/theme.css
+++ b/theme.css
@@ -680,7 +680,6 @@ body {
   --radius-m: 0.5rem;
   --radius-l: 0.75rem;
   --radius-xl: 1rem;
-  --raised-background: var(--theme-color-baseLightened80);
   --ribbon-background-collapsed: transparent;
   --ribbon-background: transparent;
   --ribbon-width: 3em;
@@ -1113,6 +1112,7 @@ body {
   --nav-item-color-active: var(--theme-color-baseLightened80);
   --nav-item-color: var(--theme-color-baseDarkened80);
   --nav-item-color-hover: white;
+  --raised-background: var(--theme-color-baseLightened80);
   --search-clear-button-color: var(--theme-color-base);
   --search-icon-color: var(--theme-color-base);
   --status-bar-text-color: black;
@@ -1362,6 +1362,7 @@ body.theme-light.theme-setting-customGradient {
   --nav-item-color-active: var(--theme-color-baseDarkened80);
   --nav-item-color: var(--theme-color-baseLightened60);
   --nav-item-color-hover: black;
+  --raised-background: var(--theme-color-baseDarkened80);
   --search-clear-button-color: var(--theme-color-base);
   --search-icon-color: var(--theme-color-base);
   --tag-color: hsl(
@@ -2870,10 +2871,13 @@ body.theme-setting-enableBuiltInAlternativeCheckboxes {
   --view-header-height: auto;
   --input-radius: 0.5rem;
   --clickable-icon-radius: 0.25rem;
-  --setting-items-background: transparent;
   --setting-items-radius: 0;
   --setting-items-border-width: 0;
   --setting-items-border-color: var(--background-modifier-border);
+}
+.is-mobile.is-dark,
+.is-mobile.is-light {
+  --setting-items-background: transparent;
 }
 .is-phone {
   /* I'm pretty sure this isn't used on mobile */
